--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "jszip": "^3.10.1",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.263.1",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+
+  "class-variance-authority": "^0.7.1"   
+    
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.5",
@@ -46,4 +49,5 @@
       "last 1 safari version"
     ]
   }
+
 }
